@@ -5,6 +5,7 @@ using Godot;
 
 public partial class CardListPanel : PanelContainer
 {
+    DropArea DropArea = null!;
     Label Title = null!, Amount = null!;
     HFlowNodeContainer CardContainerList = null!;
     IChildManagerComponent CardContainerManager = null!;
@@ -19,14 +20,31 @@ public partial class CardListPanel : PanelContainer
         }
     }
 
+    private bool _Droppable = false;
+    public bool Droppable { 
+        get => _Droppable;
+        set
+        {
+            _Droppable = value;
+            Render();
+        }
+    }
+
     public override void _Ready()
     {
+        DropArea = GetNode<DropArea>($"%{nameof(DropArea)}");
         Title = GetNode<Label>($"%{nameof(Title)}");
         Amount = GetNode<Label>($"%{nameof(Amount)}");
         CardContainerList = GetNode<HFlowNodeContainer>($"%{nameof(CardContainerList)}");
         CardContainerManager = CardContainerList;
+
+        DropArea.CardDropped += OnCardDropped;
     }
 
+    private void OnCardDropped(Card card)
+    {
+        CardDropped?.Invoke(card);
+    }
 
     private void Render()
     {
@@ -34,6 +52,14 @@ public partial class CardListPanel : PanelContainer
         {
             container.Draggable = CardsDraggable;
         });
+        DropArea.Visible = Droppable;
+    }
+
+    public void RemoveCard(Card card)
+    {
+        var targetContainer = CardContainerList.FirstChild<CardContainer>(x => ReferenceEquals(x.CurrentCard, card));
+        targetContainer.RemoveCard();
+        CardContainerList.RemoveChild(targetContainer);
     }
 
     public void Setup(string title, List<VanguardCard> cardsToShow)
@@ -43,12 +69,17 @@ public partial class CardListPanel : PanelContainer
         CardContainerList.ClearChildren();
         foreach(var card in cardsToShow)
         {
-            CardContainer container = new();
-            container.AddCard(SceneFactory.CreateVanguardCard(card));
-            container.CardPressed += OnCardPressed;
-            container.CardDragging += OnCardDragging;
-            CardContainerList.AddChild(container);
+            AddCard(SceneFactory.CreateVanguardCard(card));
         }
+    }
+
+    public void AddCard(Card card)
+    {
+        CardContainer container = new();
+        container.AddCard(card);
+        container.CardPressed += OnCardPressed;
+        container.CardDragging += OnCardDragging;
+        CardContainerList.AddChild(container);
     }
 
     private void OnCardDragging(CardBaseComponent component)
@@ -62,5 +93,6 @@ public partial class CardListPanel : PanelContainer
     }
 
     public event Action<Card>? CardPressed;
+    public event Action<Card>? CardDropped;
     public event Action<CardBaseComponent>? CardDragging;
 }
