@@ -1,13 +1,17 @@
-[gd_scene load_steps=3 format=3 uid="uid://csdff6we3cpjo"]
+[gd_scene load_steps=4 format=3 uid="uid://csdff6we3cpjo"]
 
+[ext_resource type="Script" uid="uid://d0x54wbf0ysd2" path="res://HUD/SelectFromCardList.cs" id="1_quvv4"]
 [ext_resource type="PackedScene" uid="uid://dt60jvmuuttc0" path="res://HUD/SelectCards.tscn" id="2_3g8pi"]
 [ext_resource type="PackedScene" uid="uid://cx38wvfuj0nja" path="res://HUD/CardListPanel.tscn" id="2_quvv4"]
 
-[node name="VBoxContainer" type="VBoxContainer"]
+[node name="SelectFromCardList" type="VBoxContainer"]
 offset_right = 40.0
 offset_bottom = 40.0
+theme_override_constants/separation = 64
+script = ExtResource("1_quvv4")
 
-[node name="SelectCards" parent="." instance=ExtResource("2_3g8pi")]
+[node name="SelectCardsComponent" parent="." instance=ExtResource("2_3g8pi")]
+unique_name_in_owner = true
 layout_mode = 2
 
 [node name="CardListPanel" parent="." instance=ExtResource("2_quvv4")]
